fix: requested changes in overlaping validator

--- a/web/css/review-form.css
+++ b/web/css/review-form.css
@@ -1,5 +1,5 @@
 .validator {
-  --validator-height: 6.6rem;
+  --validator-height: 9.5rem;
   height: var(--validator-height);
   display: flex;
   flex-direction: row;
